# cloudwatch-viewer

./: Cargo.toml  Dockerfile
examples/: 01-query.rs  02-write-to-file.rs
src/: error.rs  lib.rs  logging_table.rs  main.rs
src/utils/: aws.rs  constants.rs  datafusion.rs  mod.rs
