[package]
name = "cloudwatch-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-cloudwatchlogs = "1.66"
arrow-json = "54"
color-eyre = "0.6"
datafusion = "44"
dotenvy = "0.15.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
thiserror = "2"